package ar.edu.utn.frba.dds.domain.entities.colecciones.hechos;

public enum Origen {
  CARGAMANUAL,
  PORCONTRIBUYENTE
}
